force-app/main/default/objects/Important_Rating__c/Important_Rating__c.object-meta.xml
<CustomObject>
    <description>This object is used to indicate which ratings are important for each role along with the importance coefficient</description>
    <label>Important Rating</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Important Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Important Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>