force-app/main/default/objects/Important_Rating__c/fields/Certification_Rating__c.field-meta.xml
<CustomField>
    <fullName>Certification_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to indicate the rating that is important for the role</description>
    <label>Certification Rating</label>
    <referenceTo>Certification_Rating__c</referenceTo>
    <relationshipLabel>Important Ratings</relationshipLabel>
    <relationshipName>Important_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>