force-app/main/default/objects/Important_Rating__c/fields/Importance_coefficient__c.field-meta.xml
<CustomField>
    <fullName>Importance_coefficient__c</fullName>
    <description>Stores the coefficient of importance for the corresponding rating and role</description>
    <label>Importance coefficient</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>