force-app/main/default/objects/Important_Rating__c/fields/Importance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Importance_Flag__c</fullName>
    <description>Store the Importance send from model</description>
    <label>Importance Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>