force-app/main/default/objects/Important_Rating__c/fields/Intercept__c.field-meta.xml
<CustomField>
    <fullName>Intercept__c</fullName>
    <description>Store the Value send by the Model for Single Role</description>
    <label>Intercept</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>